Refactor metadata access in fromCurrentView method
Replaced usage of get(0) and size() with getFirst() and isEmpty() for accessing player metadata in PetInventory.fromCurrentView. This improves code readability and consistency with modern collection handling.